--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class = "title">
     <h1>Innovation and Emissions</h1> <br>
-    <h3>Aspen Russell & Tong Zhao</h3>
+    <h3>Tong Zhao</h3>
   </div>
 
   <!-- ICON LEGEND -->
